[package]
name = "e_cd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version= "0.4.0", features = [ "asm", "parallel" ]}
ark-ed-on-bls12-381 = "0.4.0"

[dev-dependencies]
ark-test-curves = { version = "0.4.2", default-features = false, features = [ "bls12_381_curve", "mnt6_753", "secp256k1"] }